# lib-qtLogger

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  lib-qtLogger.pri
inc/: consoleappender.h  fileappender.h  libqtlogger.h  libqtlogger_common.h  logwriterinterface.h
src/: consoleappender.cpp  fileappender.cpp  libqtlogger.cpp  logwriterinterface.cpp
testapp/: CMakeLists.txt  README.md
testapp/inc/: foo.h  main.h  nmfoo.h
testapp/src/: foo.cpp  main.cpp  nmfoo.cpp
